--- a/public/index.html
+++ b/public/index.html
@@ -30,10 +30,9 @@
 
 			<!-- When a link in the menu is clicked, we set the active variable -->
 
-			<a href="#/wantBuy" class="home" ng-click="active='home'">Buy</a>
+			<a href="#/wantBuy" class="home" ng-click="active='home'">I  want to buy</a>
 			<a href="#/wantSay" class="projects" ng-click="active='projects'">Want to Say</a>
 			<a href="#/foodListView" class="services" ng-click="active='services'">Home</a>
-			<a href="#/saveTrips" class="services" ng-click="active='services'">Save Trips</a>
 
 		
 	</nav>
